--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -74,22 +74,27 @@ body {
 header {
 	margin: 0;
 	height: 5rem;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
 }
 .logo {
-	float: right;
-	margin: 0 1rem 0 0;
+	width: 10rem;
+	height: 2rem;
+	margin: 1.5rem 5rem 0 0;
 }
-header nav {
-	padding: 2rem;
-	margin-left: 2rem;
+nav {
+	padding: 2rem 2rem 2rem 0;
 }
-header nav a {
+a {
 	text-decoration: none;
 	color: rgb(185, 185, 185);
 	margin-right: 3rem;	
+	padding: .25rem;
 }
 a:hover {
 	color: #000;
+	border-bottom: 5px solid #000;
 	transition: .5s ease;
 }
 
@@ -100,6 +105,7 @@ a:hover {
 	padding: 0 3rem 0 3rem;
 	text-align: center;
 	display: flex;
+	justify-content: space-between;
 	flex-direction: row-reverse;
 	
 }
